--- a/menuapp/res/layout/section.xml
+++ b/menuapp/res/layout/section.xml
@@ -3,15 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
-    <TextView
-        android:id="@+id/menuName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    
+    <TextView 
+        android:id="@+id/section_name"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:text="@string/menuName"
-        android:textSize="20sp"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="@string/sectionName"
         android:textStyle="bold"/>
 
 </RelativeLayout>
