--- a/menuapp/res/layout/menu_item_list.xml
+++ b/menuapp/res/layout/menu_item_list.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical">
     <TextView 
+        android:id="@+id/busines_name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/businessHint"
