--- a/menuapp/res/layout/option.xml
+++ b/menuapp/res/layout/option.xml
@@ -13,10 +13,10 @@
     
     <TextView 
         android:id="@+id/option_price"
-        android:layout_alignParentLeft="true"
-        android:layout_alignBottom="@id/option_name"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="@id/option_name"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:paddingLeft="30dp"/>
+        android:paddingRight="10dp"/>
 
 </RelativeLayout>
