--- a/menuapp/res/layout/content.xml
+++ b/menuapp/res/layout/content.xml
@@ -28,8 +28,7 @@
         android:layout_toLeftOf="@id/content_price"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content" 
-        android:paddingLeft="10dp"
-        android:text="@string/itemDescription"/>
+        android:paddingLeft="10dp"/>
     
     <TextView 
         android:id="@+id/content_text"
